# vulnreach

./: .dockerignore  .gitignore  ARCHITECTURE_DIAGRAM.md  CHANGELOG.md  Dockerfile  JAVASCRIPT_NOT_IN_VULN_REACH.md  LANGUAGE_ANALYZER_CALL_CHAIN.md  MANIFEST.in  README.md  REFACTORING_CHECKLIST.md  REFACTOR_MIGRATION_COMPLETE.md  REFACTOR_SUMMARY.txt  Readme.md  SECURITY_REVIEW.md  SKIP_NOT_REACHABLE_EXPLOITS.md  TODO.md  __init__.py  cli.py  pyproject.toml  requirements.txt  setup.py  test_java_analyzer.py  tracer_.py
.github/: copilot-instructions.md
.github/workflows/: build-test.yml  python-publish.yml  security-checks.yml  vulnreach-security.yml
docs/: enhancements.md  next-steps.md  overview.md
docs/flowcharts/: ARCHITECTURE_FLOWCHART.md
examples/: clubbing_example.py
js_app/: package.json
python_vuln_app/: README.md  requirements.txt
python_vuln_app/src/: app.py  data.yaml  emailer_.py
scripts/: install_dependencies.bat  install_dependencies.sh
security_findings/python_vuln_app/: consolidated.json  project.sbom.json  security_report.json  vulnerability_reachability_report.json
security_findings/react/: consolidated.json
src/vulnreach/: cli.py  config.py  tracer_.py  web_server.py
templates/: dashboard.html
test_packages/: test_java_analyzer.py
tests/: demo_exploitability.py  express_app.js  fastapi_app.py  flask_app.py  test_exploitability_report.json  test_reachability_engine.py  validate_analyzers.py
utils/: vuln_reachability_analyzer.py
vulnreach/: cli.py  core.py
vulnreach-dashboard/: ANALYTICS_UPDATE.md  app.py  app.py.backup
(+37 files in other folders)
